# Krysia

./: .gitignore  CMakeLists.txt  main.c  main_demo_file.c  main_demo_mic.c  rhino_demo_file.c  rhino_demo_mic.c
modules/dbus_manager/: dbus.xml  dbus_mgr.c  dbus_mgr.h  dbus_mgr_gen.c  dbus_mgr_gen.h  generated-docs-org.gtk.GDBus.Examples.ObjectManager.Another.xml  generated-docs-org.gtk.GDBus.Examples.ObjectManager.MyObject.xml  generated-docs-org.gtk.GDBus.Examples.ObjectManager.My_Object.xml  generated-docs-test.signal.Examples.ObjectManager.Another.xml  generated-docs-test.signal.Examples.ObjectManager.My_Object.xml  generated-docs-test.signal.ObjectManager.Another.xml  generated-docs-test.signal.ObjectManager.My_Object.xml
modules/intent_manager/: .intent_mgr.c.swp  .intent_mgr.h.swp  intent_mgr.c  intent_mgr.h
modules/mic_setup/: .mic.c.swp  .mic.h.swp  mic.c  mic.h
